--- a/less/theme.less
+++ b/less/theme.less
@@ -45,6 +45,8 @@ body {
 // 7.Team
 // 8.Цитата
 // 9.Footer
+// 10.Модальные окна
+// 11.Элементы формы
 
 
 
@@ -103,7 +105,7 @@ body {
   font-size: 1.5rem;
   margin-bottom: 0;
   z-index: 1000;
-
+  border-radius: 0px;
 
   .navbar-brand {
     color: @navbar-inverse-brand-color;
@@ -244,14 +246,15 @@ body {
 .affix {
   position: inherit;
   transform: none;
-  .header_wrap {
-    margin-bottom: 52px;
-  }
   .navbar-theme {
     position: fixed;
+    margin-top: 0;
     left: 0;
     top: 0;
     width: 100%;
+  }
+  .header_wrap {
+    margin-bottom: 52px;
   }
 }
 
@@ -568,6 +571,84 @@ h1,h2,h3,h4,h5,h6 {
 .footer_logo > img {
   .center-block();
 }
+
+
+
+//
+// 10.Модальные окна
+// --------------------------------------------------
+.modal-dialog {
+  margin: 45px auto;
+  width: 320px;
+  text-align: center;
+  header {
+    font-size: 1.25rem;
+    margin-bottom: 15px;
+  }
+}
+.modal-content {
+  background-color: #f3f1ef;
+}
+.modal {
+  z-index: 20000;
+}
+.close-modal {
+  border: none;
+  background: none;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  opacity: 0.4;
+  &:hover {
+    opacity: 1;
+  }
+}
+
+
+
+//
+// 11.Элементы формы
+// --------------------------------------------------
+.form-control {
+  border-radius: 0;
+}
+.form-desc {
+  margin-top: 5px;
+  font-size: 0.75rem;
+  line-height: 0.8rem;
+}
+textarea.form-control {
+  height: 7rem;
+}
+.btn {
+  position: relative;
+  outline: none;
+  &:active {
+    bottom: -3px;
+    box-shadow: none;
+  }
+}
+.btn-theme {
+  color: #fff;
+  border-color: #ff0000;
+  #gradient > .vertical-three-colors(@start-color: #ff0000; @mid-color: #e83e25; @color-stop: 50%; @end-color: #ff2000);
+  box-shadow: 0 3px 0 #913c3c;  
+  &:hover,
+  &:focus {
+    color: #fff;
+    #gradient > .vertical-three-colors(@start-color: #ff2000; @mid-color: #d22c14; @color-stop: 50%; @end-color: #ff0000);
+  }
+}
+.btn-green {
+  border-color: #8fc400;
+  #gradient > .vertical(@start-color: #8fc400; @end-color: #80b000; @start-percent: 0%; @end-percent: 100%);
+  box-shadow: 0 3px 0 #687b35;  
+  &:hover,
+  &:focus {
+    #gradient > .vertical(@start-color: #7caa00; @end-color: #76a100; @start-percent: 0%; @end-percent: 100%);
+  }
+}
+
 
 
 
