--- a/less/theme992up.less
+++ b/less/theme992up.less
@@ -44,8 +44,17 @@ html {
 
 
 //
-// 3.Slider
+// 3.Элементы формы
 // --------------------------------------------------
+  // Форма поиска
+  .form-search {
+    .clearfix();
+    .col-input {
+      float: left;
+      margin-right: 2%;
+      width: 68%;
+    }
+  }
 
 
 
