--- a/less/theme.less
+++ b/less/theme.less
@@ -29,7 +29,6 @@ body {
 }
 .main_wrap {
   background: #fff;
-  padding-top: 15px;
 }
 
 
@@ -305,6 +304,7 @@ body {
 // --------------------------------------------------
 #carousel-example-generic {
   background: #eaeaea;
+  margin-top: 15px;
 }
 .slide-desc {
   padding: 1rem;
