--- a/less/theme768up.less
+++ b/less/theme768up.less
@@ -161,6 +161,21 @@ html {
 
 
 
+//
+// 5.Форма - конфигуратор
+// --------------------------------------------------
+.configurator {
+  width: 90%;
+}
+.col-table {
+  display: table-cell;
+}
+.row-small-table {
+  display: table;
+  width: 100%;
+}
+
+
 
 
 // End  
