edit slider in form

--- a/less/theme992up.less
+++ b/less/theme992up.less
@@ -15,6 +15,8 @@ html {
 // --------------------------------------------------
 // 1.Header
 // 2.Navbar
+// 3.Элементы формы
+// 4.Форма - конфигуратор
 
 
 
@@ -55,6 +57,19 @@ html {
       width: 68%;
     }
   }
+
+
+
+//
+// 4.Форма - конфигуратор
+// --------------------------------------------------
+
+//  Слайдер
+.stoltip {
+  &:before {
+    margin-left: -0.248rem;
+  }
+}
 
 
 
