--- a/less/theme.less
+++ b/less/theme.less
@@ -953,6 +953,9 @@ textarea.form-control {
   }
 }
 //  Слайдер
+.minbeds {
+  display: none;
+}
 .ui-slider .ui-slider-handle {
   background: url('../js/jquery-ui-1.11.2.custom/images/slider-handle.png') no-repeat center center;
   width: 25px;
@@ -962,21 +965,30 @@ textarea.form-control {
 .ui-slider-horizontal .ui-slider-handle {
   top: -0.6rem;
 }
-.minbeds {
-  display: none;
-}
 .stoltip {
   display: inline-block;
   position: absolute;
-  padding: 1px 8px;
+  padding: 3px 8px;
   border-radius: 4px;
   background: #000; 
   color: #fff;
   width: 7rem;
-  bottom: -1.75rem;
+  bottom: -2.10rem;
   left: -2.8rem;
   text-align: center;
   font-weight: normal;
+  &:before {
+    content: " ";
+    display: block;
+    width: 0.625rem;
+    height: 0.625rem;
+    position: absolute;
+    background: #000;
+    top: -0.1rem;
+    left: 50%;
+    margin-left: -0.1rem;
+    .rotate(45deg);
+  }
 }
 
 
