add back link and crumbs

--- a/less/theme.less
+++ b/less/theme.less
@@ -50,6 +50,8 @@ body {
 // 13.Облако тегов
 // 14.Табы с услугами
 // 15.Панели с услугами
+// 16.Контакты
+// 17.Breadcrumb
 
 
 
@@ -999,6 +1001,25 @@ textarea.form-control {
 .map {
   margin: 15px 0;
 }
+
+
+
+//
+// 17.Breadcrumb
+// --------------------------------------------------
+.head-page-tools {
+  margin-top: 16px;
+}
+.breadcrumb {
+  margin-bottom: 0;
+  background: none;
+  color: @gray-light;
+  > li + li:before {
+    content: "";
+    padding: 0px;
+  }
+}
+
 
 
 
