--- a/less/theme.less
+++ b/less/theme.less
@@ -396,6 +396,11 @@ h1,h2,h3,h4,h5,h6 {
   border-radius: 8px;
   margin: 1rem 0;
   padding: 10px 0;
+  &.__transparent {
+    border:none;
+    background: none;
+    padding: 0;
+  }
 
   a {
     color:@text-color;
@@ -970,15 +975,18 @@ textarea.form-control {
 .stoltip {
   display: inline-block;
   position: absolute;
-  padding: 3px 8px;
+  font-size: 0.8rem;
+  line-height: 0.9rem;
+  padding: 3px 3px;
   border-radius: 4px;
   background: #000; 
   color: #fff;
   width: 7rem;
-  bottom: -2.10rem;
+  bottom: -2.45rem;
   left: -2.8rem;
   text-align: center;
   font-weight: normal;
+  height: 34.8px;
   &:before {
     content: " ";
     display: block;
@@ -986,7 +994,7 @@ textarea.form-control {
     height: 0.625rem;
     position: absolute;
     background: #000;
-    top: -0.1rem;
+    top: -0.3rem;
     left: 50%;
     margin-left: -0.1rem;
     .rotate(45deg);
@@ -1009,11 +1017,15 @@ textarea.form-control {
 // --------------------------------------------------
 .head-page-tools {
   margin-top: 16px;
+  white-space: nowrap;
 }
 .breadcrumb {
+  padding: 0 15px 0 0;
   margin-bottom: 0;
   background: none;
   color: @gray-light;
+  overflow: hidden;
+
   > li + li:before {
     content: "";
     padding: 0px;
