--- a/less/theme768up.less
+++ b/less/theme768up.less
@@ -25,7 +25,8 @@ html {
 // 2.Navbar
 // 3.Slider
 // 4.Footer
-
+// 5.Форма - конфигуратор
+// 6.Похожие статьи
 
 
 //
@@ -178,6 +179,23 @@ html {
   width: 100%;
 }
 
+
+
+//
+// 6.Похожие статьи
+// --------------------------------------------------
+.sim_article {
+  max-width: 100%;
+  .make-row(@gutter: 10px;);
+}
+.sim_article_item {
+  .make-sm-column(4; @gutter: 10px;);
+}
+.sim_article_title {
+  font-size: 0.875rem;
+  text-align: left;
+  margin-top: 0;
+}
 
 
 // End  
