add simulate articles

--- a/less/theme768up.less
+++ b/less/theme768up.less
@@ -198,5 +198,26 @@ html {
 }
 
 
+
+//
+// 7. Горячие статьи
+// --------------------------------------------------
+.item-hot-article {
+  max-width: 100%;
+}
+.title-hot-article {
+  text-align: left;
+}
+.wrap-img-hot-article {
+  position: relative;
+
+  .blind {
+    color: #fff;
+    text-align: center;
+    font-size: 7rem;
+    line-height: 7rem;
+  }
+}
+
 // End  
 }
