--- a/less/theme992up.less
+++ b/less/theme992up.less
@@ -73,5 +73,20 @@ html {
 
 
 
+//
+// 7. Горячие статьи
+// --------------------------------------------------
+.wrap-img-hot-article {
+  position: relative;
+
+  .blind {
+    color: #fff;
+    text-align: center;
+    font-size: 8rem;
+    line-height: 8.5rem;
+  }
+}
+
+
 // End  
 }
