--- a/less/theme.less
+++ b/less/theme.less
@@ -3,7 +3,7 @@
   src: url('../fonts/century_gothic.eot'); 
 }  
 //font-family: 'PT Sans', sans-serif;
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic);
+@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700,800&subset=latin,cyrillic);
 //font-family: 'Open Sans', sans-serif;
 @import url(http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic);
 //
@@ -316,6 +316,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+// иконки на главной странице
+.mp-ico { background: url('../img/csg-54cef19f9f1ba.png') no-repeat top left; }
+.sprite-alert{ background-position: 0 0; width: 63px; height: 63px; } 
+.sprite-calc{ background-position: 0 -73px; width: 44px; height: 56px; } 
+.sprite-dnk{ background-position: 0 -139px; width: 64px; height: 65px; } 
+.sprite-grad{ background-position: 0 -214px; width: 64px; height: 64px; } 
+.sprite-key{ background-position: 0 -288px; width: 64px; height: 32px; } 
+.sprite-money{ background-position: 0 -330px; width: 64px; height: 64px; } 
+
 
 
 //
@@ -412,7 +421,7 @@ h1,h2,h3,h4,h5,h6 {
 
   [class^="list_mod_"] > li:before {
     color: @link-color;
-    font-weight: bold;
+    font-weight: 700;
   }
 
   .see_more {
@@ -460,7 +469,7 @@ h1,h2,h3,h4,h5,h6 {
   }
   .title {
     font-size: 1.125rem;
-    font-weight: bold;
+    font-weight: 700;
     color: @link-color;
   }
   li {
@@ -584,7 +593,7 @@ h1,h2,h3,h4,h5,h6 {
     margin-bottom: 15px;
   }
   .name {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 1.05rem;
     display: block;
     line-height: 1.1
@@ -704,8 +713,12 @@ h1,h2,h3,h4,h5,h6 {
 //
 // 11.Элементы формы
 // --------------------------------------------------
+label {
+  font-weight: normal;
+}
 .form-control {
   border-radius: 0;
+  height: 2.2rem;
 }
 .form-desc {
   margin-top: 5px;
@@ -1065,6 +1078,7 @@ textarea.form-control {
 }
 .sim_article_img {
   display: block;
+
   > img {
     max-width: 100%;
     border: 0.4rem solid @gray-lighter;
@@ -1075,6 +1089,117 @@ textarea.form-control {
 }
 .sim_article_title {
   display: block;
+  text-align: center;
+  margin-top: 5px;
+  line-height: 0.95rem;
+  margin-bottom: 15px;
+}
+
+
+
+//
+// 19.Калькулятор
+// --------------------------------------------------
+.calc-wrap {
+  background-color: @link-color;
+  border-radius: 5px;
+  overflow: hidden;
+  padding: 0;
+  color: #ffffff;
+
+  label {
+    color: #fff;
+  }
+
+  a#calc-link {
+    color: #fff;
+    text-decoration: underline;
+    font-size: 1.35rem;
+
+    &:hover {
+      color: #f1f1f1;
+    }
+  }
+}
+img + .nophoto {
+  display: none;
+  width: 100%;
+}
+.btn-calc {
+  color: #fff;
+  width: 100%;
+  border-radius: 0px;
+  vertical-align: middle; 
+
+  &:hover {
+    background-color: @link-hover-color;
+    color: #ffffff;
+  }
+
+  &:active {
+    bottom: 0;
+  }
+
+  .mp-ico {
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
+.calc-inner {
+  padding: 15px 15px 10px 15px;
+}
+.calc-rezult {
+  font-size: 1.25rem;
+}
+
+
+
+//
+// 20. Горячие статьи
+// --------------------------------------------------
+.wrap-hot-article {
+  margin-top: 15px;
+}
+.item-hot-article {
+  display: block;
+  max-width: 360px;
+  .center-block();
+
+
+  &:hover {
+    .img-hot-article {
+      border-color: @link-color;
+    }
+
+    .blind {
+      display: none;
+    }
+  }
+}
+.wrap-img-hot-article {
+  position: relative;
+
+  .blind {
+    color: #fff;
+    text-align: center;
+    font-size: 10rem;
+    font-weight: 800;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 87, 87, 0.5);
+  }
+}
+
+.img-hot-article {
+  width: 100%;
+  border: 0.4rem solid @gray-lighter;
+}
+
+
+.title-hot-article {
   text-align: center;
   margin-top: 5px;
   line-height: 0.95rem;
